--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_PRINTFUL_API_KEY=g9ewiwCeRjpR43b6skCyDBrjBCKZCxeO3gyUU5x7
 NEXTAUTH_SECRET=jdaxfOyANmQHpCDQEBJZjNMIwwagfEvrozB55voK8Gk=
+NEXTAUTH_URL=https://covenant-society-shop.netlify.app/
