auth options modified

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_PRINTFUL_API_KEY=g9ewiwCeRjpR43b6skCyDBrjBCKZCxeO3gyUU5x7
 NEXTAUTH_SECRET=jdaxfOyANmQHpCDQEBJZjNMIwwagfEvrozB55voK8Gk=
 NEXTAUTH_URL=https://covenant-society-shop.netlify.app/
+GOOGLE_CLIENT_ID=684798905900-6897sp4kvtf4lmhhok10rbr131sj4uu6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
