--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/stripe-js": "^2.1.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -42,6 +43,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
+    "stripe": "^13.10.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
