--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
+    "printful-request": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
