Geist font added and API route cleanup

--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
+    "geist": "^1.0.0",
     "intl-messageformat": "^10.5.0",
     "micro": "^10.0.1",
     "next": "13.4.19",
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
-    "printful-request": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
