--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "introspect": "drizzle-kit introspect:mysql",
+    "prototype": "drizzle-kit push:mysql"
   },
   "dependencies": {
     "@nextui-org/button": "2.0.18",
@@ -20,6 +22,7 @@
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
     "@nextui-org/theme": "2.1.6",
+    "@planetscale/database": "^1.11.0",
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
     "@reduxjs/toolkit": "^1.9.7",
@@ -30,6 +33,8 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.28.6",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
@@ -51,5 +56,8 @@
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.19.13"
   }
 }
