--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "geist": "^1.0.0",
     "intl-messageformat": "^10.5.0",
     "micro": "^10.0.1",
-    "next": "13.4.19",
-    "next-auth": "^4.23.2",
+    "next": "14.0.1",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -51,7 +51,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
-    "stripe": "^13.10.0",
+    "stripe": "14.3.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
