--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prototype": "drizzle-kit push:mysql"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.41.1",
     "@nextui-org/button": "2.0.18",
     "@nextui-org/code": "2.0.16",
     "@nextui-org/input": "2.1.6",
