--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
     "geist": "^1.0.0",
     "intl-messageformat": "^10.5.0",
     "micro": "^10.0.1",
-    "next": "14.0.00",
+    "next": "14.0.2",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
@@ -58,6 +57,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.19.13"
+    "drizzle-kit": "^0.19.13",
+    "eslint-config-next": "14.0.2"
   }
 }
