--- a/.env
+++ b/.env
@@ -12,9 +12,13 @@ STRIPE_SECRET_KEY=sk_test_51NwgKXFXWggz9FO3LsoY4ifeTN7rT1xI36HdKvdFYBhcKcB2mmRZF
 STRIPE_WEBHOOK_SECRET=whsec_MUrbL9L32WQr9IHz68Doax26trzgD17c
 # planet scale
 DATABASE_HOST=aws.connect.psdb.cloud
-DATABASE_USERNAME=l7ihukjxczqi3gm1xrbf
-DATABASE_PASSWORD=pscale_pw_cj3krFTnLhOgs033Q9GL7wsQCZ55EprKKzw3Mo4e3Ec
-DATABASE_URL='mysql://l7ihukjxczqi3gm1xrbf:pscale_pw_cj3krFTnLhOgs033Q9GL7wsQCZ55EprKKzw3Mo4e3Ec@aws.connect.psdb.cloud/covenant_society_shop?ssl={"rejectUnauthorized":true}'
+DATABASE_USERNAME=3jm7yta0fxiekomcljmf
+DATABASE_PASSWORD=pscale_pw_JgfYOn56uuduOPpbpI72hK9kUItI5JRTvQZOUViV67e
+DATABASE_URL='mysql://3jm7yta0fxiekomcljmf:pscale_pw_JgfYOn56uuduOPpbpI72hK9kUItI5JRTvQZOUViV67e@aws.connect.psdb.cloud/covenant_society_shop?ssl={"rejectUnauthorized":true}'
+# Clerk 
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cHJpbWFyeS1jb2JyYS0xNC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_ORCZWsTcc83hV651Qu3OFJgxjTfex4xfvfwanxAPZx
+  
   
 
 
