--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prototype": "drizzle-kit push:mysql"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.3.6",
+    "@clerk/nextjs": "^4.27.1",
+    "@clerk/themes": "^1.7.9",
     "@nextui-org/button": "2.0.18",
     "@nextui-org/code": "2.0.16",
     "@nextui-org/input": "2.1.6",
@@ -30,6 +33,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "adapters": "link:@auth/core/adapters",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
